--- a/2.通过vue与dom交互/7.作业1_输出数据到模板.html
+++ b/2.通过vue与dom交互/7.作业1_输出数据到模板.html
@@ -1,18 +1,55 @@
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
-
-<div id="exercise">
-   <!-- 1) Fill the <p> below with your Name and Age - using Interpolation -->
-    <p>VueJS is pretty cool - YOUR_NAME (AGE)</p>
-    <!-- 2) Output your age, multiplied by 3 -->
-    <p></p>
-    <!-- 3) Call a function to output a random float between 0 and 1 (Math.random()) -->
-    <p></p>
-    <!-- 4) Search any image on Google and output it here by binding the "src" attribute -->
-    <div>
-        <img style="width:100px;height:100px">
+<!--
+ * @Author: your name
+ * @Date: 2020-02-17 08:57:38
+ * @LastEditTime: 2020-02-17 09:00:05
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: \vue\vue.js终极开发教程\2.通过vue与dom交互\7.作业1_输出数据到模板.html
+ -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+</head>
+<body>
+    <div id="exercise">
+       <!-- 1) Fill the <p> below with your Name and Age - using Interpolation -->
+        <p>VueJS is pretty cool - {{name}} {{age}}</p>
+        <!-- 2) Output your age, multiplied by 3 -->
+        <p>{{age*3}}</p>
+        <!-- 3) Call a function to output a random float between 0 and 1 (Math.random()) -->
+        <p>{{Random()}}</p>
+        <!-- 4) Search any image on Google and output it here by binding the "src" attribute -->
+        <div>
+            <img style="width:100px;height:100px" v-bind:src="imgLink">
+        </div>
+        <!-- 5) Pre-Populate this input with your name (set the "value" attribute) -->
+        <div>
+            <input type="text" v-on:input="changeName">
+        </div>
     </div>
-    <!-- 5) Pre-Populate this input with your name (set the "value" attribute) -->
-    <div>
-        <input type="text">
-    </div>
-</div>
+    <script>
+        new Vue({
+            el:"#exercise",
+            data:{
+                name:"viewdegree",
+                age:18,
+                imgLink: "https://cn.vuejs.org/images/logo.png"
+            },
+            methods:{
+                Random:function(){
+                    return Math.random();
+                },
+                changeName: function(event){
+                    this.name = event.target.value;
+                }
+            }
+        })
+    </script>
+</body>
+</html>
+ 
