Fix:关于max老师的作业补充,设置input框的默认值

--- a/2.通过vue与dom交互/7.作业1_输出数据到模板.html
+++ b/2.通过vue与dom交互/7.作业1_输出数据到模板.html
@@ -29,6 +29,8 @@
         </div>
         <!-- 5) Pre-Populate this input with your name (set the "value" attribute) -->
         <div>
+            <!-- 设置默认值为Vue数据的name -->
+            <input type="text" v-bind:value="name">
             <input type="text" v-on:input="changeName">
         </div>
     </div>
