--- a/2.通过vue与dom交互/12.作业2_事件.html
+++ b/2.通过vue与dom交互/12.作业2_事件.html
@@ -23,12 +23,12 @@
         </div>
         <!-- 2) Listen to the "keydown" event and store the value in a data property (hint: event.target.value gives you the value) -->
         <div>
-            <input type="text" v-on:keydown="storeValue">
+            <input type="text" v-on:keydown="value = $event.target.value">
             <p>{{ value }}</p>
         </div>
         <!-- 3) Adjust the example from 2) to only fire if the "key down" is the ENTER key -->
         <div>
-            <input type="text" v-on:keydown.enter="storeValue">
+            <input type="text" v-on:keydown.enter="value = $event.target.value">
             <p>{{ value }}</p>
         </div>
     </div>
@@ -41,9 +41,6 @@
             methods:{
                 Alert:function(){
                     alert("Hello");
-                },
-                storeValue:function(event){
-                    this.value = event.target.value;
                 }
             }
         });
