Build:观察上一种通过Vue方法响应文本的缺点

--- a/2.通过vue与dom交互/15. 计算属性来响应改变.html
+++ b/2.通过vue与dom交互/15. 计算属性来响应改变.html
@@ -20,7 +20,9 @@
      <div id="app">
          <button v-on:click="counter++">Increase</button>
          <button v-on:click="counter--">Decrease</button>
+         <button v-on:click="secondCounter++">Increase Second</button>
          <p>Counter:{{counter}}</p>
+         <p>Counter:{{secondCounter}}</p>
          <p>Result:{{result()}}</p>
      </div>
      <script>
@@ -28,15 +30,18 @@
              el:"#app",
              data:{
                  counter:0,
+                 secondCounter: 0
              },
              methods:{
                  result:function(){
+                     console.log("result函数被执行了");
+                     
                      return this.counter>5?"Greater 5":"Smaller than 5"
                  }
              }
              //如果变量counter要在很多地方用到且存在大量依赖counter属性的话,就很难维护,管理全部的increase函数或者有其他给counter赋值的地方,需要记住所有的counter就会很麻烦
              //这里将页面的counter多次用到的增加或减少的响应直接写到绑定的事件中去了,我们要做的就是根据result进行判断返回对应的字符是大了还是小了,但是在Vue的值data中不能写三目运算符,所以我们再函数里写,显示result的地方就直接调用即可
-
+            //因为Vue不知道secondCounter的变化是否会影响result()函数所以它重复执行了result()函数,但result根本没右用到secondCounter,这就会造成不必要的运算
          })
      </script>
  </body>
