--- a/2.通过vue与dom交互/18.绑定css类设置动态样式.html
+++ b/2.通过vue与dom交互/18.绑定css类设置动态样式.html
@@ -33,19 +33,25 @@
     </style>
 </head>
 <body>
-    <!-- 当我们说绑定某个属性的时候就需要特别注意,它是要修改dom的属性,绑定为了修改 :class就是v-bind:class,这里的赋值是一个字符串的对象形式的键值对,前面是已经设置的类名后面是布尔值,值可以是Vue的值也可以是自己定义的,不过既然你自己定义值那为什么不写到Vue中去呢?也就是当后面的布尔值为true的时候前面的类名就设置完成 -->
+    <!-- 当我们说绑定某个属性的时候就需要特别注意,它是要修改dom的属性,绑定为了修改 :class就是v-bind:class,这里的赋值是一个字符串的对象形式的键值对,前面是已经设置的类名后面是布尔值,值可以是Vue的值也可以是自己定义的,不过既然你自己定义值那为什么不写到Vue中去呢?也就是当后面的布尔值为true的时候前面值对应的类名就生效 -->
     <div id="app">
         <!-- 如果没有破折号那么在:class中是不用写双引号的 -->
         <!-- 将类名绑定的对象放到Vue的计算属性中去,这样看起来更加清爽 -->
         <div class="demo" @click="attachRed=!attachRed" :class="divClasses"></div>  
+        <!-- 如果我们事先不知道类名,比如由input输入的值作为第2个盒子的类名,那么应该这样写 -->
+        <!-- 但是我们应该提前设置好相应的类名不然就算设置了类名也没哟效果-->
+        <!-- 注意如果只写类名,不写bool值是默认为true的 -->
+        <div class="demo" :class="color"></div>
         <div class="demo" :class="{red:attachRed}"></div>
-        <div class="demo" :class="{red:attachRed}"></div>
-    </div>
+        <p>请输入你想要的颜色</p>
+        <input type="text" v-model="color">
+    </div> 
     <script>
         new Vue({
             el: '#app',
             data:{
-                attachRed: false
+                attachRed: false,
+                color: "green"  //设置为默认值
             },
             // 计算属性
             computed:{
