Build:绑定样式的混合写法,数组写法以及如何设置样式为正方形

--- a/2.通过vue与dom交互/19.动态设置样式(不使用css类去绑定值).html
+++ b/2.通过vue与dom交互/19.动态设置样式(不使用css类去绑定值).html
@@ -29,6 +29,10 @@
             <div class="demo" :style="{backgroundColor:color,width:width+'px'}"></div>
             <!-- 通过计算属性设置 -->
             <div class="demo" :style="myStyle"></div>
+            <!-- 与绑定css的语法类似,当混合写法用数组 -->
+            <div class="demo" :style="[myStyle,{height:height+'px'}]"></div>
+            <!-- 将元素设置为正方形,无论宽高如何改变,高度和宽度一致 -->
+            <div class="demo" :style="[myStyle,{height:width+'px'}]"></div>
             <p>请输入你想要的颜色</p>
             <input type="text" v-model="color">
             <input type="text" v-model="width">
@@ -38,7 +42,8 @@
                 el: '#app',
                 data:{
                     color: "gray",  //设置为默认颜色
-                    width: 100 //设置默认的宽度
+                    width: 100, //设置默认的宽度
+                    height: 50
                 },
                 // 计算属性
                 computed:{
